# Signalizer

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
Source/: CMakeLists.txt
Source/Editor/: MainEditor.cpp  MainEditor.h
Source/Oscilloscope/: OscilloscopeParameters.h  OscilloscopeRendering.cpp
Source/Processor/: PluginProcessor.cpp
Source/Spectrum/: SpectrumDSP.cpp  SpectrumRendering.cpp
Source/Vectorscope/: VectorscopeRendering.cpp
